src/test/success/function_no_parameters.egern
func noParams(): int {
    var a = 4;
    return a;
}
print(noParams());
