src/test/fail/assign_int_variable_to_boolean_return_fail.egern
func flip(bool: boolean): boolean {
    return !bool
}

var a = 4
print(a)
a = flip(true)
print(a)
